fix overflow

--- a/public/css/elements/gallery.sass
+++ b/public/css/elements/gallery.sass
@@ -1,7 +1,5 @@
 .gallery
   clear: both
-  overflow: hidden
-  background: green
   p, a
     +sm
       color: $colorWhite
@@ -12,6 +10,7 @@
     position: relative
     padding-bottom: 48.2%
     height: 0px
+    overflow: hidden
     &:after
       background-image: linear-gradient(0deg, rgba(0,15,20,0.6) 15%,rgba(0,15,20,0.15) 52%,rgba(0,15,20,0) 70%)
       display: block
